# xv6_rust

./: .bochsrc  Cargo.toml  README.md  aarch64-unknown-none.json  bak  build_boot_img.sh  i686-unknown-none.json  out  run.sh  x86_64-unknown-none.json
.cargo/: config.toml
bootloader/: main.rs
gdt/: main.rs
src/: main.rs  uart.rs  vga_buffer.rs  x86.rs
